                     CHANGES version 5.14

           This file summarizes changes made since 5.0

Version 5.14

New: Enable ECDH ciphers for Monit HTTP interface.

New: Enable HTTP Strict Transport Security (HSTS) on Monit HTTP interface if
SSL is enabled.


Version 5.13

New: Issue #187: Added support for free space and free inodes monitoring as an
alternative to current space/inodes usage monitoring. Both absolute number of
bytes and percent limit forms are supported. For example to check that the
filesystem has at minimum 10GB left:
    if space free < 10 GB then alert

New: Issue #190: Add support for ServerNameIndication TLS extension to support
name based virtual SSL servers.

New: The SSL/TLS compression is disabled now, as well as RC4 and DES ciphers.

Fixed: Monit doesn't try to check hostnames on start to allow faster
startup in the case that DNS is not currently available.

Fixed: The filesystem uid, gid and permission report in 'monit status' command.

Fixed: Issue #179: If the CLI command failed, the output may contain HTML footer
in addition to plaintext error description.

Fixed: Issue #186: RPM should preserve the existing configuration file on update.

Fixed: Issue #188: MacOSX system memory usage statistics included inactive memory
(free for reuse).

Fixed: FreeBSD, OpenBSD, NetBSD: The system memory usage statistics didn't include
the "wired" part (kernel memory).


Version 5.12.2

Fixed: Issue #169: Monit may hang if error occurred during SSL read or write.

Fixed: Issue #170: If monit was started with no http interface, the CLI commands
crashed.

Fixed: Signal handling for Monit stop.

Fixed: IP alias monitoring in network check.


Version 5.12.1

New: Allow to specify the IPv4 or IPv6 only for port and ping tests. If not specified,
Monit will test any available address until first success or no options are left. You can
also combine different IP version tests to make sure the machine is accessible via both IP